Removed flexbox from product overlays as it was causing issues on smaller screen sizes

--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -535,16 +535,12 @@
         overflow-y: auto;
         padding: 0 10px;
         text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
 
         img {
             max-width: 100%;
             max-height: 350px;
             height: 50%;
-            min-height: 250px;
+            min-height: 200px;
             margin: 0 auto;
             display: block;
             border-radius: $borderRadius;
